# Edgecase

./: .env.example  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_RENDER.md  Dockerfile.worker  README.md  api.py  docker-compose.yml  render.yaml  vercel.json
backend/: check_qdrant.py  config.py  main.py  populate_graph.py  pyproject.toml  requirements.txt  test_rag.py  verify_agents_cli.py  verify_pipeline.py  worker_main.py
backend/agents/: analyst.py  base.py  context_manager.py  llm_router.py  orchestrator.py  researcher.py  scraper.py  state.py
backend/ai/: __init__.py  embeddings.py  gemini_extractor.py  nvidia_client.py  nvidia_extractor.py  ollama_client.py  rag.py
backend/api/: __init__.py  agents.py  alerts.py  dashboard.py  dataset_analyzer.py  debug.py  graph.py  rag.py  risk.py  scraping.py  weather.py
backend/data/: __init__.py  impact_analyzer.py  processor.py  scheduler.py  trade_restrictions.py  weather_monitor.py
backend/db/: __init__.py  init.sql  models.py  neo4j_client.py  postgres.py  qdrant_client.py
backend/feeds/: __init__.py  feed_manager.py  social_monitor.py
backend/risk/: __init__.py  fragility.py  overconfidence.py  scoring.py  stability.py
backend/scraping/: __init__.py  anti_block.py  article_scraper.py  auto_crawler.py  browser.py  country_classifier.py  news_scrapers.py  search_engines.py  twitter_scraper.py
backend/tests/: conftest.py  test_api.py  test_scraping.py
datasets/: supply_chain_risk_data.csv
frontend/: package-lock.json  package.json
landing-page/: index.html  package-lock.json  package.json  (+2 more)
(+125 files in other folders)
